login/logout functioning

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
   <div>
     <label for="password-signup">Password:</label>
     <h4>Must be at least 8 characters</h4>
-    <input type="password" id="password-signup" />
+    <input type="text" id="password-signup" />
   </div>
   <div>
     <button type="submit">Signup</button>
@@ -28,7 +28,7 @@
   </div>
   <div>
     <label for="password-login">Password:</label>
-    <input type="password" id="password-login" />
+    <input type="text" id="password-login" />
   </div>
   <div>
     <button type="submit">Login</button>
