--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,8 +31,11 @@
 </div>
         </header>
         <main>
-            
+            <div class="container-fluid">
+            <!-- Content here -->
             {{{ body }}}
+            </div>
+            
 
             <div id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
