--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,6 +14,21 @@
     <label for="Address" class="form-label">Address</label>
     <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
   </div>
+<!-- Phone Number -->
+  <div class="col-4">
+    <label for="phone" class="form-label">Phone</label>
+    <input type="text" class="form-control" id="phone" placeholder="9058524562">
+  </div>
+<!-- Company Email -->
+  <div class="col-4">
+    <label for="company-email" class="form-label">Business Email</label>
+    <input type="text" class="form-control" id="company-email" placeholder="company@gmail.com">
+  </div>
+<!-- website -->
+  <div class="col-4">
+    <label for="Website" class="form-label">Website</label>
+    <input type="text" class="form-control" id="website" placeholder="www.test.com">
+  </div>
 <!-- Industry -->
     <div class="col-md-4 mt-4">
     <!--<label for="industry" class="form-label">Industry</label> -->
