--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,25 @@
-body {
+*{
+  box-sizing: border-box;
+ 
+}
+
+body, html{
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: "Lato", sans-serif;
+}
+
+.wrapper {
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+main{
+  flex: 1;
+  padding: 2% 4%;
 }
 
 .sidebar {
