A bit more styling and login bug fix

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
                     <button class="openbtn" onclick="openNav()">☰</button>
                 </div>
                 <div>
-                    <h1 class="display-4 text-light">LocalShop</h1>
+                    <a href="/"><h1 class="display-4 text-light">LocalShop</h1></a>
                 </div>
                 <div>
                     {{#if loggedIn}}
