--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,16 +3,16 @@
 <h1 class="p-3">Welcome user_name {{user}}</h1>
 </div>
 
-<form class="row g-3 p-4">
+<form class="company-info-form row g-3 p-4">
 <!-- NAME -->
   <div class="col-md-4">
-    <label for="inputCompanyName" class="form-label">Business Name</label>
-    <input type="text" class="form-control" value="{{company.company_name}}" id="inputCompanyName">
+    <label for="company-name" class="form-label">Business Name</label>
+    <input name="company-name" type="text" class="form-control" value="{{company.company_name}}" id="company-name">
   </div>
 <!-- Address -->
   <div class="col-4">
-    <label for="Address" class="form-label">Address</label>
-    <input type="text" class="form-control" value="{{company.address}}" id="inputAddress" placeholder="1234 Main St">
+    <label for="address" class="form-label">Address</label>
+    <input name="address" type="text" class="form-control" value="{{company.address}}" id="address" placeholder="1234 Main St">
   </div>
 <!-- Phone Number -->
   <div class="col-4">
@@ -22,7 +22,7 @@
 <!-- Company Email -->
   <div class="col-4">
     <label for="company-email" class="form-label">Business Email</label>
-    <input type="text" class="form-control" value="{{company.company-email}}" id="company-email" placeholder="company@gmail.com">
+    <input type="text" class="form-control" value="{{company.company_email}}" id="company-email" placeholder="company@gmail.com">
   </div>
 <!-- website -->
   <div class="col-4">
@@ -30,9 +30,9 @@
     <input type="text" class="form-control" value="{{company.website}}"id="website" placeholder="www.test.com">
   </div>
 <!-- Industry -->
-    <div class="col-md-4 mt-4">
-    <!--<label for="industry" class="form-label">Industry</label> -->
-    <select class="form-select form-select-lg mb-3" value="{{company.industry.industry_name}}" aria-label=".form-select-lg example">
+    <div class="col-md-4">
+    <label for="industry" class="form-label">Industry</label>
+    <select class="form-select  mb-3" id="industry" value="{{company.industry.industry_name}}" aria-label=".form-select-lg example">
       <option selected>Choose a industry...</option>
       <option value="1">1</option>
       <option value="2">2</option>
@@ -85,19 +85,27 @@
 <h4 class="mt-3"> List your products and/or services:</h4>
 <div class="row">
  <div class="col-md-4">
-    <label for="product_name" class="form-label">Products /
+    <label for="product-name" class="form-label">Products /
     Service</label>
-    <input type="text" class="form-control" value="{{company.products.product_name}}" id="product-name" placeholder="item-1">
+    <input type="text" class="form-control" value='no' id="product-name" placeholder="item-1">
   </div>
 <!-- Products description -->
   <div class="col-md-8">
-    <label for="description_text" class="form-label">Product Description</label>
-    <textarea name="description_text" class="form-control" id="description_text">{{company.products.description_text}}</textarea>
+    <label for="description-text" class="form-label">Product Description</label>
+    <textarea name="description-text" class="form-control" id="description-text">no</textarea>
   </div>
   </div>
 </div>
 <!-- Save button -->
-  <div class="col-12 d-flex justify-content-end mt-4">
+<div class="row" >
+    <div class="col-11 d-flex justify-content-end mt-4">
     <button type="submit" class="btn btn-primary">Save</button>
   </div>
+<!-- Update button -->
+<div class="col-1 d-flex justify-content-end mt-4">
+    <button type="submit" class="btn btn-primary">Update</button>
+  </div>
+</div>
 </form>
+
+<script src="/javascript/add-company.js"></script>
