--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,7 @@
 
             <div id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+                <a href="#">All Companies</a>
                 <a href="#">Name</a>
                 <a href="#">Industry</a>
                 <a href="#">Services</a>
@@ -47,7 +48,6 @@
         </footer>
     </div>
     
-        
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
     {{/if}}
