--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,128 +1,134 @@
-*{
-  box-sizing: border-box;
- 
+* {
+	box-sizing: border-box;
 }
 
-body, html{
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: "Lato", sans-serif;
+body,
+html {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	font-family: "Lato", sans-serif;
 }
 
 .wrapper {
-  width: 100%;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
+	width: 100%;
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
-main{
-  flex: 1;
-  padding: 2% 4%;
+main {
+	flex: 1;
+	padding: 2% 4%;
 }
 
-footer{
-  display: flex;
-  justify-content: center;
-  background-color: #111;
-  padding: 1% 0;
+footer {
+	display: flex;
+	justify-content: center;
+	background-color: #111;
+	padding: 1% 0;
 }
 
-a{
-  text-decoration: none;
-  color: white
+a {
+	text-decoration: none;
+	color: white;
 }
 
-.hero{
-  background-image: url("../images/hero-image.jpg");
-  background-size: cover;
-  background-position: center;
-  height: 900px;
-} 
+.hero {
+	background-image: url("../images/hero-image.jpg");
+	background-size: cover;
+	background-position: center;
+	height: 900px;
+}
 
 .sidebar {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: #111;
+	overflow-x: hidden;
+	transition: 0.5s;
+	padding-top: 60px;
 }
 
 .sidebar a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+	padding: 8px 8px 8px 32px;
+	text-decoration: none;
+	font-size: 25px;
+	color: #818181;
+	display: block;
+	transition: 0.3s;
 }
 
 .sidebar a:hover {
-  color: #f1f1f1;
+	color: #f1f1f1;
 }
 
 .sidebar .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
 }
 
 .openbtn {
-  font-size: 20px;
-  cursor: pointer;
-  background-color: #111;
-  color: white;
-  padding: 10px 15px;
-  border: none;
+	font-size: 20px;
+	cursor: pointer;
+	background-color: #111;
+	color: white;
+	padding: 10px 15px;
+	border: none;
 }
 
 .openbtn:hover {
-  background-color: #444;
+	background-color: #444;
 }
 
 #main {
-  transition: margin-left .5s;
+	transition: margin-left 0.5s;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
+	.sidebar {
+		padding-top: 15px;
+	}
+	.sidebar a {
+		font-size: 18px;
+	}
 }
 
-  body, html {
-    height: 100%;
+body,
+html {
+	height: 100%;
 }
 
 /* The hero image */
 .hero-image {
-  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://images.unsplash.com/photo-1489348611450-4c0d746d949b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80");
+	/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url("https://images.unsplash.com/photo-1489348611450-4c0d746d949b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80");
 
-  /* Set a specific height */
-  height: 50%;
+	/* Set a specific height */
+	height: 50%;
 
-  /* Position and center the image to scale nicely on all screens */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+	/* Position and center the image to scale nicely on all screens */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
 }
 
 /* Place text in the middle of the image */
 .hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
 }
