search results page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
 
             <div id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-                <a href="#">All Companies</a>
+                <a href="/searchAll">All Companies</a>
                 <a href="#">Name</a>
                 <a href="#">Industry</a>
                 <a href="#">Services</a>
