--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,35 +1,10 @@
-<<<<<<< HEAD
 * {
 	box-sizing: border-box;
-}
-
-body,
-html {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	font-family: "Lato", sans-serif;
-}
-
-.wrapper {
-	width: 100%;
-	min-height: 100%;
-	display: flex;
-	flex-direction: column;
-}
-
-main {
-	flex: 1;
-	padding: 2% 4%;
-=======
-*{
-  box-sizing: border-box;
-  font-family: 'Nunito', sans-serif;
+	font-family: "Nunito", sans-serif;
 }
 
 .dim {
-  filter: brightness(80%);
->>>>>>> b6d25e4d76c35d4df2a33bafcef27d756ac9d61e
+	filter: brightness(80%);
 }
 
 footer {
@@ -45,17 +20,7 @@ footer a {
 	color: white;
 }
 
-<<<<<<< HEAD
-.hero {
-	background-image: url("../images/hero-image.jpg");
-	background-size: cover;
-	background-position: center;
-	height: 900px;
-}
-
-=======
 /*  sidebar styling start */
->>>>>>> b6d25e4d76c35d4df2a33bafcef27d756ac9d61e
 .sidebar {
 	height: 100%;
 	width: 0;
@@ -118,100 +83,70 @@ footer a {
 }
 /* sidebar styling end */
 
-
 body,
 html {
 	height: 100%;
 }
 
 /* The hero image */
-<<<<<<< HEAD
-.hero-image {
-	/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-		url("https://images.unsplash.com/photo-1489348611450-4c0d746d949b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80");
-
-	/* Set a specific height */
-	height: 50%;
-
-	/* Position and center the image to scale nicely on all screens */
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
-=======
 body {
-  margin: 0;
-  font-family: sans-serif;
+	margin: 0;
+	font-family: sans-serif;
 }
 
 .hero {
-  /* Sizing */
-  width: 100vw;
-  height: 60vh;
-  
-  /* Flexbox  */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-  /* Text styles */
-  text-align: center;
-  color: rgb(30, 235, 166); 
-  padding: 20vw;
-  
-  /* Background styles */
-  background-image: url('https://images.unsplash.com/photo-1565201426074-a17f574f8692?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1376&q=80');
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  
->>>>>>> b6d25e4d76c35d4df2a33bafcef27d756ac9d61e
+	/* Sizing */
+	width: 100vw;
+	height: 60vh;
+
+	/* Flexbox  */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	/* Text styles */
+	text-align: center;
+	color: rgb(30, 235, 166);
+	padding: 20vw;
+
+	/* Background styles */
+	background-image: url("https://images.unsplash.com/photo-1565201426074-a17f574f8692?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1376&q=80");
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 .hero-text {
-<<<<<<< HEAD
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: white;
-}
-=======
-  margin-left: 10vw;
-  margin-right: 10vw;
+	margin-left: 10vw;
+	margin-right: 10vw;
 }
 
 .hero h1 {
-  /* Text styles */
-  font-size: 5em;
-  
-  /* Margins */
-  margin-top: 0;
-  margin-bottom: 0.5em;
+	/* Text styles */
+	font-size: 5em;
+
+	/* Margins */
+	margin-top: 0;
+	margin-bottom: 0.5em;
 }
 
 .hero .btn {
-  /* Positioning and sizing */
-  display: block;
-  width: 200px;
-  
-  /* Padding and margins */
-  padding: .5em;
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  
-  /* Text styles */
-  color: white; 
-  text-decoration: none;
-  font-size: 1.5em;
- 
-  
-  /* Border styles */
-  border: 3px solid white; 
-  border-radius: 20px;
-}
+	/* Positioning and sizing */
+	display: block;
+	width: 200px;
 
->>>>>>> b6d25e4d76c35d4df2a33bafcef27d756ac9d61e
+	/* Padding and margins */
+	padding: 0.5em;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
+
+	/* Text styles */
+	color: white;
+	text-decoration: none;
+	font-size: 1.5em;
+
+	/* Border styles */
+	border: 3px solid white;
+	border-radius: 20px;
+}
