--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
 
             <div id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-                <a href="/searchAll">All Companies</a>
+                <a href="#">All Companies</a>
                 <a href="#">Name</a>
                 <a href="#">Industry</a>
                 <a href="#">Services</a>
@@ -45,7 +45,7 @@
             {{{ body }}}
         </main>
 
-        <footer class="navbar-dark bg-dark">
+        <footer class="navbar-dark bg-dark fixed-bottom">
             <a href="/">LocalShop ©2021</a>
         </footer>
     </div>
