--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -150,3 +150,34 @@ body {
 	border: 3px solid white;
 	border-radius: 20px;
 }
+
+/* Single Company Page styling */
+
+.single-company {
+	background-image: url("https://images.unsplash.com/photo-1482514194978-3ed8cc9d86c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+	background-size: cover;
+	height: 300px;
+	background-position: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	margin-bottom: 50px;
+}
+
+.company-name {
+	background-color: rgb(253, 238, 238);
+	opacity: 0.6;
+}
+
+.company-name h1 {
+	font-size: 6rem;
+}
+
+.company-name a {
+	font-size: 3rem;
+}
+
+.company-info {
+	margin-bottom: 50px;
+}
