--- a/views/partials/company-card.handlebars
+++ b/views/partials/company-card.handlebars
@@ -3,6 +3,6 @@
     <h5 class="card-title">{{company_name}}</h5>
     <p class="card-text">{{about}}</p>
     <h6 class="card-subtitle mb-2 text-muted">Phone: {{phone}}</h6>
-    <a href="#" class="card-link ">View more</a>
+    <a href="/company/{{id}}" class="card-link ">View more</a>
   </div>
 </div>
