fixed dashboard bug

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 
 <body>
     <div class="wrapper">
-        <header>
+        <header class="sticky-top">
             <nav class="navbar navbar-dark bg-dark navbar-expand-sm bg-light text-left d-flex justify-content-between px-4">
                 <div id="main">
                     <button class="openbtn" onclick="openNav()">☰</button>
@@ -42,10 +42,11 @@
         </header>
 
         <main>
+            
             {{{ body }}}
         </main>
 
-        <footer class="navbar-dark bg-dark fixed-bottom">
+        <footer class="navbar-dark bg-dark">
             <a href="/">LocalShop ©2021</a>
         </footer>
     </div>
