--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,7 +3,7 @@
 <h1 class="p-3">Welcome user_name {{user}}</h1>
 </div>
 
-<form class="company-info-form row g-3 p-4">
+<form class="company-info-form row g-3 p-4" style="max-width: 100%">
 <!-- NAME -->
   <div class="col-md-4">
     <label for="company-name" class="form-label">Business Name</label>
