--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,7 @@
             {{{ body }}}
         </main>
 
-        <footer class="navbar-dark bg-dark fixed-bottom">
+        <footer class="navbar-dark bg-dark">
             <a href="/">LocalShop ©2021</a>
         </footer>
     </div>
