--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,8 +22,8 @@
                 </div>
                 <div>
                     {{#if loggedIn}}
-                    <a class="text-right" href="/dashboard">Welcome to your dashboard.</a>
-                    <button id="logout" class="btn-no-style text-right">logout</button>
+                    <a class="text-right" href="/dashboard">Company Dashboard</a>
+                    <button id="logout" class="btn-no-style">logout</button>
                     {{else}}
                     <a href="/login">Login</a>
                     {{/if}}
