--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,6 +86,22 @@ footer a {
 	background-color: #444;
 }
 
+.btn-no-style{
+	background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    text-decoration: none;
+    color: white;
+    font-size: 100%;
+    transition: color .1s;
+    margin-left: 16px;
+}
+.btn-no-style:hover {
+    background: none;
+    color: #225ca3;
+}
+
 #main {
 	transition: margin-left 0.5s;
 }
