--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 
 <div class="container-fluid bg-info p-2 mt-3">
-<h1 class="p-3">Welcome user_name {{user}}</h1>
+<h1 class="p-3">Welcome {{username}}</h1>
 </div>
 
 <form class="company-info-form row g-3 p-4" style="max-width: 100%">
