--- a/views/company.handlebars
+++ b/views/company.handlebars
@@ -3,7 +3,7 @@
         <div class="row">
             <section class="company-name col-sm-12">
                 <h1>{{company.company_name}}</h1>
-                <a href="{{company.website}}">www.{{company.company_name}}.com</a>
+                <a href="{{company.website}}" target="_blank">{{company.website}}</a>
             </section>
             </section>
         </div>
