--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,9 +1,9 @@
 <section class="hero dim">
-        <div class="hero-inner">
-            <div class="hero-text"></div>
-            <h2>Local is Vital</h2>
-            <h3>Search local companies any way you want. Local shops are around you everywhere and carry all the products you want.</h3>
-            <a href="./login.handlebars" class="btn">Start Here</a>
-            </div>
+    <div class="hero-inner">
+        <div class="hero-text"></div>
+        <h2>Local is Vital</h2>
+        <h3>Search local companies any way you want. Local shops are around you everywhere and carry all the products you want.</h3>
+        <a href="/login" class="btn">Start Here</a>
         </div>
-    </section>
+    </div>
+</section>
