--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -216,3 +216,95 @@ body {
 .company-info {
 	margin-bottom: 50px;
 }
+
+
+:root {
+	--color-primary: #005AF0;
+	--color-text-light: #fff;
+	--color-bg-light: #FAFAFC;
+
+	--space-1: .5rem;  /* 8px */
+	--space-2: 1rem;   /* 16px */
+  }
+  /* some basic button styling */
+  .favorite-button input[type=submit] {
+	width: 48px;
+	height: 48px;
+	cursor: pointer;
+	border: none;
+	margin: 4px;
+	transition: background 300ms ease-in-out;
+  }
+  .favorite-button amp-list {
+	margin: var(--space-2);
+  }
+
+  .favorite-button .heart-fill {
+	background: url('data:image/svg+xml;utf8,<svg fill="%23000000" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>');
+  }
+  .favorite-button .heart-border {
+	background: url('data:image/svg+xml;utf8,<svg fill="%23000000" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"/></svg>');
+  }
+  /* While the page loads we show a grey heart icon to indicate that the functionality is not yet available. */
+  .favorite-button .heart-loading,
+  .favorite-button .heart-loading[placeholder] {
+	background: url('data:image/svg+xml;utf8,<svg fill="%23cccccc" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"/></svg>');
+  }
+  .favorite-button .favorite-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  .favorite-button .favorite-count {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: var(--space-1);
+	margin-left: var(--space-1);
+	position: relative;
+	width: 48px;
+	background: var(--color-primary);
+	border-radius: .4em;
+	color: var(--color-text-light);
+  }
+  .favorite-button .favorite-count.loading {
+	color: #ccc;
+	background: var(--color-bg-light);
+  }
+  .favorite-button .favorite-count.loading:after {
+	border-right-color: var(--color-bg-light);
+  }
+  .favorite-button .favorite-count:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: var(--space-1) solid transparent;
+	border-right-color: var(--color-primary);
+	border-left: 0;
+	margin-top: calc(-1 * var(--space-1));
+	margin-left: calc(-1 * var(--space-1));
+  }
+  /* A simple snackbar to show an error */
+  #favorite-failed-message {
+	display: flex;
+	justify-content: space-between;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	width: 100%;
+	max-width: 450px;
+	background: #323232;
+	color: white;
+	padding: 1rem 1.5rem;
+	z-index: 1000;
+  }
+  #favorite-failed-message div {
+	color: #64dd17;
+	margin: 0 1rem;
+	cursor: pointer;
+  }
