HLinking up industry drop downs with seeds

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -34,9 +34,20 @@
     <label for="industry" class="form-label">Industry</label>
     <select name="industry" class="form-select  mb-3" id="industry" value="{{company.industry.industry_name}}" aria-label=".form-select-lg example">
       <option selected>Choose a industry...</option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
+      <option value="1">Furniture</option>
+      <option value="2">Wearable Accessories</option>
+      <option value="3">Apparel</option>
+      <option value="4">Home Kitchen and Dining</option>
+      <option value="5">Home Bedding</option>
+      <option value="6">Home Bathroom</option>
+      <option value="7">Home Outdoor</option>
+      <option value="8">Garden</option>
+      <option value="9">Games</option>
+      <option value="10">Reading</option>
+      <option value="11">Toys</option>
+      <option value="12">Home Services</option>
+      <option value="13">Commercial Services</option>
+      <option value="14">Administration and Office</option>
     </select>
   </div>
 <!-- About Us -->
