--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -96,8 +96,7 @@
 <h4 class="mt-3"> List your products and/or services:</h4>
 <div class="row">
  <div class="col-md-4">
-    <label for="product-name" class="form-label">Products /
-    Service</label>
+    <label for="product-name" class="form-label">Products/Service</label>
     <input type="text" class="form-control" value='no' id="product-name" placeholder="item-1">
   </div>
 <!-- Products description -->
