--- a/views/company.handlebars
+++ b/views/company.handlebars
@@ -44,6 +44,9 @@
             <h1>Who We Are</h1>
             {{company.about}}
         </section>
+        <center>
+        {{> product-info company.Product}}
+        </center>
    </div>
 <span class="likebtn-wrapper" data-theme="heartcross" data-i18n_like="Like" data-ef_voting="wobble" data-white_label="true" data-identifier="heartliker" data-popup_hide_on_outside_click="false" data-share_enabled="false" data-tooltip_enabled="false" data-site_id="60b988e3fa8fdf0c3d9f10bf"></span>
 <script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
