--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -91,32 +91,42 @@
     </div>
 </div>
 </div>
+
+
 <!-- Products -->
 <div class="container-fluid mt-3">
-<h4 class="mt-3"> List your products and/or services:</h4>
-<div class="row">
- <div class="col-md-4">
-    <label for="product-name" class="form-label">Products/Service</label>
-    <input type="text" class="form-control" value="{{company.products.0.product_name}}"" id="product-name" placeholder="item-1">
-  </div>
-<!-- Products description -->
-  <div class="col-md-8">
-    <label for="description-text" class="form-label">Product Description</label>
-    <textarea name="description-text" class="form-control" id="description-text">{{company.products.0.description_text}}</textarea>
-  </div>
+  <h4 class="mt-3"> List your products and/or services:</h4>
+  {{#each company.products as |product|}}
+  {{> add-company product}}
+  {{/each}}
+  <h4 class="mt-3"> Add a new product or service:</h4>
+  <div class="row mb-4">
+    <!-- Product Name -->
+    <div class="col-md-4">
+      <label for="product-name" class="form-label">Products/Service</label>
+      <input type="text" class="form-control" value="{{product_name}}" id="product-name" placeholder="New Product">
+    </div>
+    <!-- Products Description -->
+    <div class="col-md-7">
+      <label for="description-text" class="form-label">Product Description</label>
+      <textarea name="description-text" class="form-control" rows="1" id="description-text">{{description_text}}</textarea>
+    </div>
+    <div class="col-md-1 d-flex justify-content-end align-items-end">
+      <button type="button" class="btn btn-primary" id="add-product-btn">+</button>
+    </div>
   </div>
 </div>
+
 <!-- Save button -->
 {{#if company}}
-<div class="col-12 d-flex justify-content-end mt-4">
+<div class="col-12 d-flex justify-content-center mt-4">
     <button type="submit" class="btn btn-primary">Update</button>
-  </div> 
-</div>
+</div> 
 {{else}}
 <div class="row" >
-    <div class="col-12 d-flex justify-content-end mt-4">
+    <div class="col-12 d-flex justify-content-center mt-4">
     <button type="submit" class="btn btn-primary">Save</button>
-  </div>
+</div>
 {{/if}}
 </form>
 
