--- a/views/partials/add-company.handlebars
+++ b/views/partials/add-company.handlebars
@@ -5,8 +5,12 @@
       <input type="text" class="form-control" value="{{product_name}}" id="product-name" placeholder="New Product">
     </div>
     <!-- Products Description -->
-    <div class="col-md-8">
+    <div class="col-md-7">
       <label for="description-text" class="form-label">Product Description</label>
       <textarea name="description-text" class="form-control" rows="1" id="description-text">{{description_text}}</textarea>
+    </div>
+    <!-- Delete Button -->
+    <div class="col-md-1 d-flex justify-content-end align-items-end">
+      <button type="button" class="btn btn-danger delete-product-btn" data-id="{{id}}">-</button>
     </div>
 </div>
