--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -92,13 +92,15 @@
 </div>
 </div>
 
-
+{{#if company}}
 <!-- Products -->
 <div class="container-fluid mt-3" id="product-list">
-  <h4 class="mt-3"> List your products and/or services:</h4>
-  {{#each company.products as |product|}}
-  {{> add-company product}}
-  {{/each}}
+  {{#if company.products}}
+    <h4 class="mt-3"> List your products and/or services:</h4>
+    {{#each company.products as |product|}}
+    {{> add-company product}}
+    {{/each}}
+  {{/if}}
   <h4 class="mt-3"> Add a new product or service:</h4>
   <div class="row mb-4">
     <!-- Product Name -->
@@ -114,23 +116,24 @@
     </div>
   </div>
 </div>
+{{/if}}
 
 <!-- Save button -->
 {{#if company}}
 <div class="col-12 d-flex justify-content-center mt-4">
-    <button type="submit" class="btn btn-primary">Update</button>
+    <button type="submit" class="btn btn-primary">Update Company</button>
 </div> 
 {{else}}
 <div class="row" >
     <div class="col-12 d-flex justify-content-center mt-4">
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary">Create Company</button>
 </div>
 {{/if}}
 </form>
 
 {{#if company}}
 <script src="/javascript/edit-company.js"></script>
+<script src="/javascript/add-delete-product.js"></script>
 {{else}}
 <script src="/javascript/add-company.js"></script>
 {{/if}}
-<script src="/javascript/add-delete-product.js"></script>
