--- a/views/partials/product-info.handlebars
+++ b/views/partials/product-info.handlebars
@@ -3,9 +3,9 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">Product:</h5>
-            <h5 class="card-title">{{0.product_name}}</h5>
+            <h5 class="card-title">{{Product.product_name}}</h5>
             <h5 class="card-title">Description:</h5>
-            <p class="card-text">{{0.description_text}}</p>
+            <p class="card-text">{{Product.description_text}}</p>
         </div>
     </div>
 </div>
