--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
                 <a href="#">Name</a>
                 <a href="#">Industry</a>
                 <a href="#">Services</a>
-                <a href="#">About</a>
+                <a href="/about-us">About</a>
                 <a href="#">Contact</a>
             </div>
         </header>
