--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -1,27 +1,41 @@
-<div class="container text-center mt-5">
-    <div class="row">
+<div class="container text-center about-us">
+    <div class="background">
+        <div class="row">
+            <h2 class="aboutus-title mb-5 mt-5">About Us</h2>
+        </div>
 
-    <h1 class="aboutus-title mb-5">About Us</h1>
+        <div class="row">
+            <div class="col-sm-4">
+                <h3>Our Developers</h3>
+                    <p>
+                        We are a group of 4 students from the University of Toronto SCS, taking on a Web Development Bootcamp.
+                    </p>
+                    <h5>Meet the Team!</h5>
+                    <p> Sean Brent <br> 
+                    Chailtali Patel <br>
+                    Aimee Jesso <br>
+                    Jeremy Santos</p>
+            </div>
 
+            <div class="col-sm-4 mission">
+                <h3>Our Mission</h3>
+                <p class=>
+                    To help and empower small businesses within your area.
+                </p>
+            </div>
+
+            <div class="col-sm-4">
+                <h3>Why LocalShop?</h3>
+                <p>
+                    Local Retail is vital for sustaining small communities <br>
+                    We decided on an idea of creating a main hub for local businesses to advertise their products/services. <br>
+                    Businesses may create their own websites and social media but there is no guarantee they will rank on major search engines. <br>
+                    Search engines like Google do help, but why not have all small retail businesses saved in one place? <br>
+                    LocalShop displays a business summary page for customers.
+                </p>
+            </div>
+
+        </div>
     </div>
-    <div class="row">
-        <div class="col-sm-4">
-            <h2> Meet our Developers</h2>
-            <p>We are a group of 4 students from the University of Toronto SCS, taking on a Web Development Bootcamp.</p>
-            <h4>Meet the Team!</h4>
-            <p>Sean Brent</p>
-            <p>Chailtali Patel</p>
-            <p>Aimee Jesso</p>
-            <p>Jeremy Santos</p>
-        </div>
 
-        <div class="col-sm-4">
-            <h2>Why LocalShop?</h2>
-            <p>We decided on an idea of creating a main hub for local businesses to advertise their products/services. <br></p>
-        </div>
-        <div class="col-sm-4">
-
-        </div>
-
-    </div>
 </div>
