--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
                 <a href="#">Industry</a>
                 <a href="#">Services</a>
                 <a href="/about-us">About</a>
-                <a href="#">Contact</a>
+                <a href="/contact">Contact</a>
             </div>
         </header>
 
