--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -2,7 +2,7 @@
     <div class="row">
         <h2>Contact Us</h2>
     </div>
-    <div class="row d-flex justify-content-center align-items-center mt-5">
+    <div class="d-flex justify-content-center align-items-center mt-5 row">
         <div class="col-sm 4 contact-info">
             <h3>LocalShop</h3>
             <p>
